# aqa-python-2024

./: README.md  conftest.py  pyproject.toml
src/api/: github_api.py
src/applications/ui/: github_ui.py
src/applications/ui/pages/: login_page.py  signup_page.py
src/config/: config.py
src/ui/: git_hub_app.py
src/ui/pages/: login_page.py
tests/: test_gl_job_board.py  test_login.py
tests/test_api/: test_repository.py
tests/test_ui/: test_login_page.py
workers/: interfaces.py  playwright_worker.py  selenium_worker.py
